changes form mail address

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 <div id="contact">
     <h2>Kontakt</h2>
     <div id="contact-form">
-        <form method="POST" action="https://formspree.io/tom.ein.stein@t-online.de">
+        <form method="POST" action="https://formspree.io/mail@tomstein.me">
             <input type="hidden" name="_subject" value="Kontaktanfrage von tomstein.me" />
             <input type="email" name="_replyto" placeholder="Email" required>
             <textarea name="message" placeholder="Nachricht" required></textarea>
