--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
         <div class="row">
             <div class="col-sm-5 copyright">
                 <p>
-                    Copyright &copy; 2018 Tom Stein
+                    Copyright &copy; 2018 Tom Stein <br>
+                    <a href="impressum.html">Impressum</a>
                 </p>
             </div>
             <div class="col-sm-2 top">
