renamed Fähigkeiten -> Skills

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#projects">Projekte</a>
             </li>
             <li>
-                <a href="#skills">Fähigkeiten</a>
+                <a href="#skills">Skills</a>
             </li>
             <li>
                 <a href="#contact">Kontakt</a>
@@ -291,7 +291,7 @@
 <!-- End #projects -->
 
 <div id="skills">
-    <h2 class="heading">Fähigkeiten</h2>
+    <h2 class="heading">Skills</h2>
     <ul>
         <li>Java</li>
         <li>Android</li>
