--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="project-info">
                         <h3>Beleuchteter Headsethalter</h3>
                         <p>
-                            Ein mit LEDs beleuchteter Halter fürs ein Headset / einen Kopfhörer.
+                            Ein mit LEDs beleuchteter Halter für ein Headset / einen Kopfhörer.
                             Zwischen den zwei Milchglasscheiben befinden sich WS2812B LEDs, welche von einem Ardunio nano angesteuert werden.
                         </p>
                         <a href="https://imgur.com/a/90DKLLF" target="_blank">Projekt anzeigen</a>
