--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div class="row">
             <div class="col-sm-5 copyright">
                 <p>
-                    Copyright &copy; 2019 Tom Stein <br>
+                    Copyright &copy; 2017<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script>, Tom Stein.<br>
                     <a href="impressum.html">Impressum</a>
                 </p>
             </div>
