update Schüler -> Student

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Tom Stein</h1>
-            <h2>Schüler, Softwareentwickler</h2>
+            <h2>Student, Softwareentwickler</h2>
         </div>
         <!-- End #lead-content -->
 
@@ -83,7 +83,7 @@
                         }
 
                         // In JavaScript, the first month (January) is month number 0, so December returns month number 11.
-                        document.getElementById("info_text").innerHTML = "Ich bin ein deutscher Schüler aus NRW. Derzeit bin ich " + calculate_age(new Date(2001,1-1,8)) + " Jahre alt und bestrebe die allgemeine Hochschulreife im Bereich Mathematik & Informatik. Hobbymäßig arbeite ich für <a href=\"https://www.fantapptic.me/de\" target=\"_blank\">Fantapptic Apps</a>."  
+                        document.getElementById("info_text").innerHTML = "Ich bin Student der Informatik an der TU Dortmund. Derzeit bin ich " + calculate_age(new Date(2001,1-1,8)) + " Jahre alt. Hobbymäßig arbeite ich für <a href=\"https://www.fantapptic.me/de\" target=\"_blank\">Fantapptic Apps</a>."  
                     </script>
                 </div>
             </div>
