--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <li>IoT</li>
         <li>Raspberry Pi</li>
         <li>Python</li>
-        <li>HTML</li>
+            <li>SQL</li>
     </ul>
 </div>
 <!-- End #skills -->
