update i/o knapsack problem

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 <h3>It-Talents</h3>
                 <h4>Rucksackproblem (I/O Knapsack)</h4>
                 <p>
-                    Entwicklung einer möglichen <a href="https://github.com/ScholliYT/Rucksackproblem"
-                        target="_blank">Lösung</a> für das I/O Knapsack Problem in Unity.
+                    Entwicklung einer <a href="https://github.com/ScholliYT/Rucksackproblem"
+                        target="_blank">Lösung</a> für das <a href="https://de.wikipedia.org/wiki/Rucksackproblem">I/O Rucksackproblem</a> unter verwendung des Unity Frameworks.
                 </p>
             </div>
 
