experience: added INEZ

--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Erfahrung</h2>
         <div id="experience-timeline">
+            <div data-date="September 2019">
+                <h3>INEZ - Der INtelligente EinkaufsZettel</h3>
+                <h4>Entwicklung einer Webanwendung</h4>
+                <p>
+                    Basierend auf der <a href="https://www.it-talents.de/foerderung/code-competition/edeka-digital-code-competition-08-2019">Aufgabenstellung von IT-Talents</a> ist inez-app eine Implementierung eines intelligenten Einkaufszettels.
+                </p>
+                <a href="https://github.com/ScholliYT/inez" target="_blank">GitHub</a><br>
+                <a href="https://inez-app.azurewebsites.net/" target="_blank">Website</a>
+            </div>
+
             <div data-date="Juni 2018">
                 <h3>ROBOCOM 2018</h3>
                 <h4>Programmierung, Bau</h4>
